[package]
name = "mls-enhanced-client"
version = "0.1.0"
edition = "2021"

[dependencies]
# MLS and crypto dependencies
openmls = "0.7"
openmls_rust_crypto = "0.4"
openmls_basic_credential = "0.4"
openmls_traits = "0.4"
openmls_memory_storage = "0.4"

# TUI dependencies
ratatui = "0.26"
crossterm = "0.27"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Networking
tokio-tungstenite = "0.20"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Other utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
